# strypes-labs-2023-final

./: Dockerfile  Makefile  README.md  crontab  docker-compose.yml  elasticsearch.yml  pyproject.toml  startup.sh
.github/workflows/: main.yml
client/: .eslintrc.cjs  babel.config.cjs  index.html  jest.config.ts  package-lock.json  package.json
client/src/: app.tsx  main.tsx  request.tsx  store.ts
client/src/components/: navbar.tsx
client/src/components/ui/: facet.tsx  listing.tsx
client/src/pages/: listing.page.tsx  search.page.tsx
client/src/services/: listing.service.ts  search.service.ts  search.services.ts
client/src/stores/: listings.store.ts  reducers.ts  search.store.ts
client/src/styles/: common.style.tsx  listing.style.tsx  navbar.style.tsx  search.style.tsx
client/src/types/: Facet.ts  Listing.ts
client/test/: listing.service.test.ts  listing.test.ts  search.service.test.ts
crawl/: es.py  items.py  pipelines.py  services.py  settings.py  utils.py
crawl/models/: Fluctuation.py  Listing.py  Source.py  base.py  fluctuation.py  listing.py  source.py
crawl/spiders/: erelement.py  mobilestore.py  robotev.py
server/: main.py
server/models/: base.py  listing.py  source.py
server/models/elastic/: __init__.py  listing.py
server/routes/: listings.py
server/services/: elastic.py
server/types/: search.py
server/utils/: elastic_to_dict.py
