[tool.poetry]
name = "rpi"
version = "0.1.0"
description = ""
authors = ["Atanas Pozharliev <ABPozharliev19@codingburgas.bg>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.4"
Scrapy = "^2.7.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
price-parser = "^0.3.4"
sqlalchemy = "^2.0.9"
elasticsearch-dsl = "^7.4.1"
fastapi-camelcase = "^1.0.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"